# libgifsi

./: .gitignore  CMakeLists.txt  ConfigUnix.h.in  ConfigWin.h.in  README.md  configure.ac
include/: gifsi.h
include/lcdf/: clp.h
src/: CMakeLists.txt  gif_format.cpp  gifdiff.c  giffunc.c  gifread.c  gifsi.cpp  gifsi.hpp  gifsi_io.hpp  gifsicle.c  gifsicle.h  gifunopt.c  gifview.c  gifwrite.c  kcolor.c  kcolor.h  kmatrix.h  main.cpp  merge.c  optimize.c  opttemplate.c  quantize.c  support.c  unipart.c  unipart.h  win32cfg.h  xform.c
